# hybrid-automation-engine

./: .gitignore  README.md  package.json
automation-core/: .env.example  dbschema.sql  jest.config.ts  package.json
automation-core/data/: api_specs.db
automation-core/src/: server.ts  types.ts
automation-core/src/controllers/: AutomationController.ts
automation-core/src/models/: ScenarioModel.ts  SpecModel.ts  UiFlowModel.ts
automation-core/src/services/: UiRunner.ts
automation-core/tests/models/: ScenarioModel.test.ts
automation-mcp/: pyproject.toml
automation-mcp/src/: server.py
automation_core/: .gitignore  README.md  swagger.yaml  tsconfig.json
automation_core/src/config/: Database.ts
automation_core/src/controllers/: ScenarioController.ts  SpecController.ts  UiFlowController.ts
automation_core/src/models/: SessionManager.ts
automation_core/src/routes/: index.ts
automation_core/src/services/: ApiRunner.ts  HybridRunner.ts
automation_core/src/utils/: logger.ts
automation_core/tests/: setup.ts
automation_core/tests/controllers/: SpecController.test.ts
automation_core/tests/services/: HybridRunner.test.ts
src/: app.ts  server.ts
src/config/: Database.ts
src/routes/: index.ts
tests/: setup.ts
tests/controllers/: AutomationController.test.ts
tests/models/: SpecModel.test.ts
