[project]
name = "automation-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "sbanik",email = "contactsouravbanik@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "mcp (>=1.26.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
